Fix the toc jump when scrolling

--- a/static/css/standards.css
+++ b/static/css/standards.css
@@ -651,6 +651,10 @@ hr {
     position:      relative;
 }
 
+.container .container {
+    padding: 0;
+}
+
 .bar-item {
     float: left;
 }
